Added linkedin logo image

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             MATLAB | Google Suite | Java | C++ | R | Python | Assembly | VDHL | C | JavaScript | C# | PHP
         </p>
         <hr>
-        <h2>LINKEDIN</h2>
+        <img src="Linkedin-logo.jpg" alt="LINKEDIN">
         <p>
             <a href="https://www.linkedin.com/in/charlotteklucas/">Visit Charlotte Lucas' LinkedIn</a>
         </p>
