--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <body>
         <header>
-        <h1><span class="left">CHARLOTTE LUCAS</span><span class="right"><small>Barrington, IL 60010 • (847) 404-6376 • clucas0027@gmail.com</small></span></h1><br>
+        <h1><span class="left">CHARLOTTE LUCAS</span><span class="right"><small>Barrington, IL 60010 • (847) 404-6376 • <a href="clucas0027@gmail.com">clucas0027@gmail.com</a></small></span></h1><br>
         <br>
         </header>
         <hr>
@@ -110,7 +110,7 @@
             MATLAB | Google Suite | Java | C++ | R | Python | Assembly | VDHL | C | JavaScript | C# | PHP
         </p>
         <hr>
-        <img src="Linkedin-logo.jpg" alt="LINKEDIN">
+        <img src="Linkedin-logo.jpg" width="100" alt="LINKEDIN">
         <p>
             <a href="https://www.linkedin.com/in/charlotteklucas/">Visit Charlotte Lucas' LinkedIn</a>
         </p>
