Fixed font color in header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <style>
             h1{
                 margin-bottom: -10px;
+                color: black;
             }
             h2 {
                 margin-top: 5px;
@@ -31,6 +32,9 @@
             }
             .left{
                 float:left;
+            }
+            img{
+                margin-bottom: -10px;
             }
         </style>
     </head>
@@ -110,7 +114,7 @@
             MATLAB | Google Suite | Java | C++ | R | Python | Assembly | VDHL | C | JavaScript | C# | PHP
         </p>
         <hr>
-        <img src="Linkedin-logo.jpg" width="100" alt="LINKEDIN">
+        <img src="Linkedin-logo.jpg" width="125" alt="LINKEDIN">
         <p>
             <a href="https://www.linkedin.com/in/charlotteklucas/">Visit Charlotte Lucas' LinkedIn</a>
         </p>
