--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <style>
             h1{
                 margin-bottom: -10px;
+            }
+            h1 a:link{
                 color: black;
             }
             h2 {
@@ -26,6 +28,7 @@
             #first-child{
                 list-style-type: none;
                 margin-top: 15px;
+                margin-bottom: 10px;
             }
             .right{
                 float:right;
@@ -34,7 +37,7 @@
                 float:left;
             }
             img{
-                margin-bottom: -10px;
+                margin-bottom: -20px;
             }
         </style>
     </head>
