Changed line breaks

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             }
             h1 a:link{
                 color: black;
+                text-decoration: none;
             }
             h2 {
                 margin-top: 5px;
@@ -69,10 +70,9 @@
             Washington University, St. Louis <br>
             <br>
             <b>Key Coursework:</b> <br>
-            Intro to Electrical and Systems Engineering | Intro to Electrical and Electronic Circuits | Systems Security <br>
-            Intro to Computer Engineering | Data Structures and Algorithms | Digital Logic and Computer Design <br>
-            Intro to Electronic Circuits |Computer Architecture | Object-Oriented Software Development <br>
-            Intro to Systems Software | Intro to Computer Security | Computer Systems Design | Technical Writing <br>
+            Intro to Electrical and Systems Engineering | Intro to Electrical and Electronic Circuits | Systems Security | Intro to Computer Engineering | Data Structures and Algorithms
+            | Digital Logic and Computer Design | Intro to Electronic Circuits |Computer Architecture | Object-Oriented Software Development | Intro to Systems Software
+            | Intro to Computer Security | Computer Systems Design | Technical Writing <br>
         </p>
         <hr>
         <h2>Professional Experience</h2>
