Adjusted line break

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <br>
             <b>Key Coursework:</b> <br>
             Intro to Electrical and Systems Engineering | Intro to Electrical and Electronic Circuits | Systems Security | Intro to Computer Engineering | Data Structures and Algorithms
-            | Digital Logic and Computer Design | Intro to Electronic Circuits |Computer Architecture | Object-Oriented Software Development | Intro to Systems Software
+            | Digital Logic and Computer Design | Intro to Electronic Circuits <br> Computer Architecture | Object-Oriented Software Development | Intro to Systems Software
             | Intro to Computer Security | Computer Systems Design | Technical Writing <br>
         </p>
         <hr>
