Fixed typo in school name

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p>
             <b><i>Currently Pursuing </i>Bachelor of Science (BS), Computer Engineering (GPA: 3.95)</b> <br>
             <b><i>Currently Pursuing </i>Bachelor of Science (BS), Computer Science | Minor in History</b> <br>
-            Washington University, St. Louis <br>
+            Washington University in St. Louis <br>
             <br>
             <b>Key Coursework:</b> <br>
             Intro to Electrical and Systems Engineering | Intro to Electrical and Electronic Circuits | Systems Security | Intro to Computer Engineering | Data Structures and Algorithms
