--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 
     <body>
         <header>
-        <h1><span class="left">CHARLOTTE LUCAS</span><span class="right"><small>Barrington, IL 60010 • (847) 404-6376 • <a href="clucas0027@gmail.com">clucas0027@gmail.com</a></small></span></h1><br>
+        Resume as of January 2024.
         <br>
         </header>
+        <hr>
+        <h1><span class="left">CHARLOTTE LUCAS</span><span class="right"><small>Barrington, IL 60010 • (847) 404-6376 • <a href="clucas0027@gmail.com">clucas0027@gmail.com</a></small></span></h1><br>
         <hr>
         <p>
             <strong>ASPIRING COMPUTER ENGINEER</strong> leveraging academic experience in conjunction with computer science, critical thinking, and project management
