Updated horizontal rule after title

--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
         Resume as of January 2024.
         <hr>
         </header>
-        <h1><span class="left">CHARLOTTE LUCAS</span><span class="right"><small>Barrington, IL 60010 • (847) 404-6376 • <a href="clucas0027@gmail.com">clucas0027@gmail.com</a></small></span></h1><br>
+        <h1><span class="left">CHARLOTTE LUCAS</span><span class="right"><small>(847) 404-6376 • <a href="clucas0027@gmail.com">clucas0027@gmail.com</a></small></span></h1><br>
         <br>
         <hr>
+        <br>
         <p>
             <strong>ASPIRING COMPUTER ENGINEER</strong> leveraging academic experience in conjunction with computer science, critical thinking, and project management
             skills to design new software programs while guiding teams of students in devising and developing advanced solutions in computer engineering. Detail-oriented
