--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         <hr>
         <h2>Education</h2>
         <p>
-            <b><i>Currently Pursuing </i>Bachelor of Science (BS), Computer Engineering (GPA: 3.95)</b> <br>
-            <b><i>Currently Pursuing </i>Bachelor of Science (BS), Computer Science | Minor in History</b> <br>
+            <strong><em>Currently Pursuing </em>Bachelor of Science (BS), Computer Engineering (GPA: 3.95)</strong> <br>
+            <strong><em>Currently Pursuing </em>Bachelor of Science (BS), Computer Science | Minor in History</strong> <br>
             Washington University in St. Louis <br>
             <br>
-            <b>Key Coursework:</b> <br>
+            <strong>Key Coursework:</strong> <br>
             Intro to Electrical and Systems Engineering | Intro to Electrical and Electronic Circuits | Systems Security | Intro to Computer Engineering | Data Structures and Algorithms
             | Digital Logic and Computer Design | Intro to Electronic Circuits <br> Computer Architecture | Object-Oriented Software Development | Intro to Systems Software
             | Intro to Computer Security | Computer Systems Design | Technical Writing <br>
@@ -79,7 +79,7 @@
         <h2>Professional Experience</h2>
         <p>
             <span class="left"><strong>Lavner Education</strong> - St. Louis, MO </span><span class="right"><strong>06/2023 - 08/2023</strong></span><br>
-            <i>Information Technology (IT) Intern</i>
+            <em>Information Technology (IT) Intern</em>
         </p>
             <ul>
                 <li>Prepared and delivered educational STEM-focused lessons to students including adding supplemental material as needed and using interpersonal communication
@@ -90,7 +90,7 @@
             </ul>
         <p>
             <span class="left"><strong>Washington University in St. Louis</strong> - St. Louis, MO</span><span class="right"><strong>01/2021 - 05/2023</strong></span><br>
-            <i>Teaching Assistant (Intro to Computer Engineering/Intro to Digital Logic &amp; Computer Design)</i>
+            <em>Teaching Assistant (Intro to Computer Engineering/Intro to Digital Logic &amp; Computer Design)</em>
         </p>
             <ul>
                 <li>Assisted in the instruction of the courses, assessing student coding work, technical homework, and process diagrams to ensure correct formulations and guarantee
@@ -99,17 +99,17 @@
                     for success on course assessments</li>
             </ul>
         <p>
-            <i><u>Additional Experience: </u></i><br>
-            <span class="left"><b>Nubs Nob</b> | Ski Instructor </span><span class="right"><b>12/2019 - 01/2024</b></span><br>
-            <span class="left"><b>Pool Watch Inc.</b> | Lifeguard &amp; Lifeguard Manager </span><span class="right"><b>03/2017 - 08/2022</b></span><br>
+            <em><u>Additional Experience: </u></em><br>
+            <span class="left"><strong>Nubs Nob</strong> | Ski Instructor </span><span class="right"><strong>12/2019 - 01/2024</strong></span><br>
+            <span class="left"><strong>Pool Watch Inc.</strong> | Lifeguard &amp; Lifeguard Manager </span><span class="right"><strong>03/2017 - 08/2022</strong></span><br>
         </p>
         <hr>
         <h2>AFFILIATIONS &amp; AWARDS</h2>
         <p>
-            Encouncil - <i>VP/Programming Chair &amp; Vertigo Sub-Chair: Sound &amp; Power</i><br>
-            Women in Computer Science (WICS) - <i>Member</i><br>
-            Society of Women Engineers (SWE) - <i>Member</i><br>
-            String Theory - <i>Member</i><br>
+            Encouncil - <em>VP/Programming Chair &amp; Vertigo Sub-Chair: Sound &amp; Power</em><br>
+            Women in Computer Science (WICS) - <em>Member</em><br>
+            Society of Women Engineers (SWE) - <em>Member</em><br>
+            String Theory - <em>Member</em><br>
             <u>Honors:</u> President's Service Award | Illinois State Scholar | Outstanding Science Seniors 2020
         </p>
         <hr>
